==================================================
Changes in CALIBERcodelists version 0.2-5
==================================================

BUG FIXES

- Source of imported codelists was ignored, corrected
  in as.codelist()

==================================================
Changes in CALIBERcodelists version 0.2-4
==================================================

CHANGES

- Extract Source information from Rmd file
- icd10source option removed from export; instead
  Source for master dictionary export should be set
  using setMetadata before export

BUG FIXES

- Read to ICD-9 conversion now works (a function
  was omitted from previous version)
- Bug in setMetadata (setting Source) corrected
- Allow up to four codelists or dictionary names in
  setdictionary 

==================================================
Changes in CALIBERcodelists version 0.2-3
==================================================

NEW FEATURES

- Allow setMetadata to set data source HES/ONS in META
- Add a decode() function to return the term from a 
  medcode, Read code, ICD10 or OPCS code
- Add the ICD9-CM dictionary and ICD9-ICD10 mapping

BUG FIXES

- codematch allows a vector of codes to match with
  exact = FALSE (previously only worked with exact = TRUE)
- Excluded category now has a description in the table
  of contents in HTML document

==================================================
Changes in CALIBERcodelists version 0.2-2
(third version on R-Forge)
==================================================

NEW FEATURES

- a new function medcodeis() which creates a selection
  based on medcodes
- codematch() can accept a vector of codes to match.
  Thanks to Joshua for suggesting this.
- a function getCodelist() which finds and loads a
  CALIBER format codelist from a directory tree.

CHANGES

- when termhas() is called with a vector of regular
  expressions, they are combined using OR rather than
  AND. This is for consistency with the codematch,